Fixed playlistIcon spacing on mobile... I hope

--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  grid-gap: 20px;
 }
 
 .playlist_icon{
@@ -140,6 +139,7 @@
   transform: scale(1,1);
   box-shadow: 0px 0px 16px 0px rgba(0,0,0,0);
   transition: all .1s ease-in-out;
+  margin: 10px;
 }
 
 .playlist_icon:hover{
